--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
   --mains-color: #e7e9fc;
   --mains-bg-color: #e7e9fc;
   --main-font: 'Raleway', sans-serif;
+  --customers-color: #8e8f99;
 }
 body {
   font-family: 'Roboto', sans-serif;
@@ -123,8 +124,10 @@ img {
   margin: 0 auto;
   text-align: center;
   padding: 188px 0;
-  background-image: linear-gradient
-      (rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
     url('../images/peopleoffice\ 1.jpg');
   background-repeat: no-repeat;
   background-position: center;
@@ -165,6 +168,24 @@ img {
 .hero-button.link:focus {
   color: #404bbf;
 }
+.icon-list {
+  height: 64px;
+  width: 59px;
+}
+
+.icon {
+  background: #f4f4fd;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  left: 0px;
+  top: 0px;
+  width: 264px;
+  height: 112px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
 .description {
   padding-top: 120px;
 }
@@ -173,6 +194,7 @@ img {
   display: flex;
   justify-content: space-between;
 }
+
 .description-item {
   width: 264px;
 }
@@ -250,6 +272,35 @@ img {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
   text-align: center;
+}
+.socials-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 16 px 0 16px;
+}
+.socials-icon {
+  width: 16px;
+  height: 16px;
+  fill: #f4f4fd;
+}
+
+.socials-item {
+  width: 40px;
+  height: 40px;
+}
+.socials-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--accent-bg-color);
+  border-radius: 50%;
+}
+.socials-link: hover {
+  background-color: var(--accent-bg-color);
 }
 
 .footer-section {
@@ -333,4 +384,48 @@ ul {
 
 .about-portfolio {
   flex-basis: calc((100% - 2 * 24px) / 3);
+}
+.customers-title {
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--grey-color);
+  text-align: center;
+  padding-top: 130px;
+  padding-bottom: 72px;
+}
+.customer {
+  height: 88px;
+  width: 168px;
+}
+.adress-customers {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--customers-color);
+  border-radius: 4px;
+}
+.adress-customers :hover {
+  fill: var(--accent-color);
+  border: 1px solid var(--customers-color);
+  border-radius: 4px;
+}
+
+.icons-customers {
+  fill: var(--customers-color);
+  height: 56px;
+  width: 104px;
+}
+.customers-list {
+  font-style: normal;
+  color: var(--customers-color);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  padding-bottom: 120px;
 }
