--- a/css/styles.css
+++ b/css/styles.css
@@ -289,6 +289,11 @@ img {
 .socials-item {
   width: 40px;
   height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: blue;
+  border-radius: 50%;
 }
 .socials-link {
   display: flex;
@@ -428,4 +433,45 @@ ul {
   align-items: center;
   gap: 24px;
   padding-bottom: 120px;
+}
+.socials-item1 {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  background: #2e2f42;
+  border-radius: 50%;
+}
+.socials-icon1 {
+  width: 24px;
+  height: 24px;
+  fill: #f4f4fd;
+  background: #2e2f42;
+}
+.socials-tittle {
+  font-weight: 500px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--main-bg-color);
+  margin-bottom: 16px;
+  display: block;
+}
+.socials-list1 {
+  display: flex;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+.socials-link1 {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  text-decoration: underline;
 }
