--- a/css/styles.css
+++ b/css/styles.css
@@ -132,8 +132,8 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-attachment: fixed;
   background-color: var(--mains-bg-color);
+  max-width: 1440px;
 }
 
 .hero-title {
@@ -178,12 +178,10 @@ img {
   border-radius: 4px;
   display: flex;
   justify-content: center;
-  left: 0px;
-  top: 0px;
   width: 264px;
   height: 112px;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  align-items: center;
+  margin: 8px;
 }
 
 .description {
@@ -278,22 +276,15 @@ img {
   gap: 24px;
   justify-content: center;
   align-items: center;
-  padding: 8px 16 px 0 16px;
 }
 .socials-icon {
   width: 16px;
   height: 16px;
-  fill: #f4f4fd;
 }
 
 .socials-item {
   width: 40px;
   height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: blue;
-  border-radius: 50%;
 }
 .socials-link {
   display: flex;
@@ -301,8 +292,8 @@ img {
   justify-content: center;
   width: 100%;
   height: 100%;
-  background-color: var(--accent-bg-color);
   border-radius: 50%;
+  background: #4d5ae5;
 }
 .socials-link:hover {
   background-color: var(--accent-bg-color);
@@ -397,9 +388,13 @@ ul {
   text-transform: capitalize;
   color: var(--grey-color);
   text-align: center;
-  padding-top: 130px;
   padding-bottom: 72px;
 }
+.sections-customers {
+  padding-bottom: 120px;
+  padding-top: 130px;
+}
+
 .customer {
   height: 88px;
   width: 168px;
@@ -432,7 +427,6 @@ ul {
   display: flex;
   align-items: center;
   gap: 24px;
-  padding-bottom: 120px;
 }
 .socials-item1 {
   width: 40px;
@@ -474,4 +468,7 @@ ul {
   align-items: center;
   justify-content: center;
   text-decoration: underline;
+}
+.footer-container {
+  display: flex;
 }
